--- a/helm.yaml
+++ b/helm.yaml
@@ -3,3 +3,12 @@ image:
 
 port: 8080
 component: payment
+
+serviceAccount:
+  create: true
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::403215663985:role/eks-prod-ssm-pm-role
+
+
+PARAMETERS: "CART_HOST,roboshop.prod.payment.cart_url CART_PORT,roboshop.prod.payment.cart_port USER_HOST,roboshop.prod.payment.user_url USER_PORT,roboshop.prod.payment.user_port AMQP_HOST,roboshop.prod.payment.amqp_host AMQP_USER,roboshop.prod.payment.amqp_user AMQP_PASS,roboshop.prod.payment.amqp_password"
+
